MOSIP-281_Made changes to test OpenJFX/OpenJDK(11)