@@ -329,7 +329,7 @@ public class ClientJarDecryption extends Application {
 												LoggerConstants.APPLICATION_NAME, LoggerConstants.APPLICATION_ID,
 												"Preparing command to launch the reg-client");
 
-										String cmd = "java" + " -Dfile.encoding=UTF-8" + " -cp " + tempPath + "/*;"
+										String cmd = "java" + " --module-path C:\\Application\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib --add-modules javafx.controls,javafx.fxml"+" -Dfile.encoding=UTF-8" + " -cp " + tempPath + "/*;"
 												 + "/* io.mosip.registration.controller.Initialization";
 
 										Process process = Runtime.getRuntime().exec(cmd);
